stratosource/sfdiff/testfiles/rtest/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>EstAnnualRevForWWOrg__c</fullName>
        <label>Est Annual Rev</label>
        <picklist>
            <picklistValues>
                <fullName>$1-$100M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$101 Million or more</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1-50M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-150M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-250M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-300M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>301-500M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-750M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>751-1B&gt;</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exchange__c</fullName>
        <label>Exchange</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCPA_Check_Comments__c</fullName>
        <label>FCPA Check Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FCPA_Check__c</fullName>
        <label>FCPA Check</label>
        <picklist>
            <picklistValues>
                <fullName>Channel Operations Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed with Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed with Comments</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Systems__c</fullName>
        <label>File Systems</label>
        <picklist>
            <picklistValues>
                <fullName>ext3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReiserFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XFS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency_Days__c</fullName>
        <description>Translates the picklist value from Frequency field into # of days</description>
        <formula>CASE( Reminder_Frequency__c ,
&quot;Quarterly&quot;, 90,
&quot;Bi-Annually&quot;, 182,
&quot;Annually&quot;, 365,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geographic_Sales_Coverage__c</fullName>
        <description>The geographic area that this Partner covers.

Added for CGS Project</description>
        <inlineHelpText>The geographic area that this Partner covers.</inlineHelpText>
        <label>Geographic Sales Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <label>Global Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HMMI_Ent_ID__c</fullName>
        <description>This field is the Harte Hanks unique identifier.</description>
        <label>HMMI Ent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Environment__c</fullName>
        <label>Hardware Environment</label>
        <picklist>
            <picklistValues>
                <fullName>Itanium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POWER/OpenPower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x86</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x86-64(AMD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x86-64(Intel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zSeries</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hardware_Focus__c</fullName>
        <label>Hardware Focus</label>
        <picklist>
            <picklistValues>
                <fullName>No Hardware Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mainframe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel based servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power-PC RISC Workstations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notebooks/Desktop Solutions/Thin Clients</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hardware_Platform__c</fullName>
        <label>Hardware Platform</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM zSeries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Power Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM s390</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM pSeries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM iSeries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Itanium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel 64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel x86</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMD 64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Sparc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HasAccountTeamAssigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a flag that is used for Partner Center on-boarding to indicate that the account team rules have applied and the account team has been assigned, indicating that it is ready to process &amp; validate.</description>
        <label>Has Account Team Been Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_They_been_Convicted__c</fullName>
        <label>Have They been Convicted?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hosting_Partner__c</fullName>
        <description>Accounts that are registered in the Hosting Program.</description>
        <label>Hosting Program Member Level</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hosting Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosting Resellers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosting Partners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IT_Budget__c</fullName>
        <label>IT Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>I_Agree_to_the_Terms_and_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement to T&apos;s &amp; C&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Other_Middleware__c</fullName>
        <label>If Other Middleware</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Immediate_Parent_Account__c</fullName>
        <label>Immediate Parent Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immediate_Parent_D_U_N_S__c</fullName>
        <label>Immediate Parent D-U-N-S #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Focus__c</fullName>
        <label>Industry Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government-Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media and Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil and Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State/County/Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Industry_Vertical_Expertise__c</fullName>
        <label>Industry Vertical Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government-Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media and Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil and Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State/County/Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Details__c</fullName>
        <label>Infrastructure Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsPartner_Custom_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to set up the trigger that validates if the partner has an status - Hidden</description>
        <label>IsPartner_Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBoss_Account_ID__c</fullName>
        <description>Field used to identify the Account ID from the JBSF prior to migration to RHSF</description>
        <label>JBoss Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBoss_Middleware_Skills__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the partner have skills in JBoss and Middleware?

Added for CGS project</description>
        <inlineHelpText>Does the partner have skills in JBoss and Middleware?</inlineHelpText>
        <label>JBoss/Middleware Skills?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Cell_Phone__c</fullName>
        <label>Key Contact Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Email__c</fullName>
        <label>Key Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Primary_Phone__c</fullName>
        <label>Key Contact Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Secondary_Phone__c</fullName>
        <label>Key Contact Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <label>Key Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Industry_Ratios__c</fullName>
        <label>Key Industry Ratios</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Obstacles__c</fullName>
        <label>Key Obstacles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Linux_Servers__c</fullName>
        <description>How many Linux servers is the company running</description>
        <label>Linux Servers #</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Value__c</fullName>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Achievement_Date__c</fullName>
        <description>Implemented for CGS

Partner agrees to achieve Marketing Plan completion by this date.</description>
        <inlineHelpText>Partner agrees to achieve Marketing Plan completion by this date.</inlineHelpText>
        <label>Marketing Plan Achievement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Microsoft_Servers__c</fullName>
        <description>How many Microsoft servers is the company running?</description>
        <label>Microsoft Servers #</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Middleware_Supported__c</fullName>
        <label>Middleware Supported</label>
        <picklist>
            <picklistValues>
                <fullName>JBoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websphere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weblogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MigrationSource__c</fullName>
        <description>Which source system this partner was migrated from</description>
        <label>Migration Source</label>
        <picklist>
            <picklistValues>
                <fullName>Onboarded</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Partner Center New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Partner Center Merged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitoring__c</fullName>
        <label>Monitoring</label>
        <picklist>
            <picklistValues>
                <fullName>BMC Patrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Openview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novell Zenworks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opsware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tivoli</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Partner_Accepting_Legal_T_s__c</fullName>
        <label>Name of Partner Accepting Legal T&apos;s</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NamedAccount__c</fullName>
        <label>Sales Team</label>
        <picklist>
            <picklistValues>
                <fullName>BeNeLux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise-Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise-New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key - East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key - West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Runtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEB</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a Key or Named Account?</description>
        <label>Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Income_Growth__c</fullName>
        <label>Net Income Growth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Income__c</fullName>
        <label>Net Income</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_End_Customer_Account__c</fullName>
        <label># of End Customer Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployeesInWWOrg__c</fullName>
        <label>Number of Employees</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1001</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberOfSalesPeople__c</fullName>
        <label>Number of Sales People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfServerClassSystemsInWWOrg__c</fullName>
        <label>Number of  Systems</label>
        <picklist>
            <picklistValues>
                <fullName>1-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51 or more</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberOfTechnicalPeople__c</fullName>
        <label>Number of Technical People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Customers__c</fullName>
        <description>Implemented for CGS

Number of current customers</description>
        <inlineHelpText>Number of current customers</inlineHelpText>
        <label>Number of Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_RHCA_Certifications__c</fullName>
        <label>Number of RHCA Certifications</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_RHCE__c</fullName>
        <label>Number of RHCE Certifications</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_RHCSS_Certifications__c</fullName>
        <label>Number of RHCSS Certifications</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_RHCT_Certifications__c</fullName>
        <label>Number of RHCT Certifications</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_Certifications__c</fullName>
        <description>Implemented for CGS

Number Of Current Sales Certs Achieved</description>
        <inlineHelpText>Number Of Current Sales Certs Achieved</inlineHelpText>
        <label>Number of Sales Certifications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Technical_Certifications__c</fullName>
        <description>Implemented for CGS
Number Of Current Tech Certs Achieved</description>
        <inlineHelpText>Number Of Current Technical Certifications Achieved</inlineHelpText>
        <label>Number of Technical Certifications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Trained_JBoss_Professionals__c</fullName>
        <label>Number of Trained JBoss Professionals</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OS_Environment__c</fullName>
        <label>OS Environment</label>
        <picklist>
            <picklistValues>
                <fullName>AIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FreeBSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP-UX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux (RHEL Clone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux (SuSE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solaris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>z/OS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>One_Year_Stock_Price_History__c</fullName>
        <label>One Year Stock Price History</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Source_Practice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Implemented for CGS</description>
        <inlineHelpText>Is this an Open Source Practice?</inlineHelpText>
        <label>Open Source Practice?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operating_System_Supported__c</fullName>
        <label>Operating System Supported</label>
        <picklist>
            <picklistValues>
                <fullName>Red Hat Enterprise Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SuSe Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solaris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fedora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FreeBSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CentOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ubuntu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPUX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>OracleAccountID__c</fullName>
        <description>Identifier for the Oracle financial entity.</description>
        <label>Oracle Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleAccountNumber__c</fullName>
        <label>Oracle Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OraclePartyID__c</fullName>
        <label>Oracle Party ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OraclePartyNumber__c</fullName>
        <label>Oracle Party Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherHWVendor__c</fullName>
        <label>Other HW Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Countries__c</fullName>
        <description>This field contains other countries of operation not defined in the Countries of Operation field.</description>
        <label>Other Countries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Partnerships__c</fullName>
        <label>Other Partnerships</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>